--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+*{
+margin: 0;
+margin: 0;
+}
+
+body{
+  font-family: 'Netflix Font', sans-serif;
+  background-color: #000000;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar{
+  width: 0;
+}
