--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
       </ul>
       <ul class="navbar-nav ms-auto justify-content-center text-center me-5">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/search"><i class="bi bi-search" style="font-size: 25px;font-weight: bo;"></i></a>
+          <a class="nav-link active" aria-current="page" routerLink="/search"><i class="bi bi-search" style="font-size: 25px;font-weight: bolder;"></i></a>
         </li>
         <li class="nav-item ms-4">
           <a class="nav-link" routerLink="search"><i class="bi bi-bell" style="font-size: 25px;font-weight: bold;"></i></a>
